tests/cases/errors/sscanf_in_expression/main.sv
module Top;
  int a;
  initial begin
    if ($sscanf("1", "%d", a)) begin
      a = a + 1;
    end
  end
endmodule
